--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,18 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>OneLeaf</title>
-    <link href="css/category_page.css" rel="stylesheet" type="text/css"/>
+    <link href="{% static "css/category_page.css" %}" rel="stylesheet" type="text/css"/>
     <script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/category_list.js"></script>
+    <script src="{% static "js/category_list.js" %}"></script>
 </head>
 <body>
 
 
 <div class="box">
-    <img data-original="" class="logo" src="img/logo.png"/>
+    <img data-original="" class="logo" src="{% static "img/logo.png" %}"/>
     <div class="jumbotron">
         <h1 class="title_main head-title">OneLeaf</h1>
         <p class="title_p">-- One page,One world</p>
@@ -23,84 +24,84 @@
     <ul class="hot-list clearfix">
 
         <li class="rect-item first-line" id='finance'>
-            <img data-original="" class="item-img index-img" src="img/finance.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/finance.png" %}"/>
             <h3 class="item-title">财经</h3>
             <h4 class="item-sub-title">交易 银行 股票</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item first-line" id='sports'>
-            <img data-original="" class="item-img index-img" src="img/sports.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/sports.png" %}"/>
             <h3 class="item-title">体育</h3>
             <h4 class="item-sub-title">明星 足球 篮球</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item first-line" id='science'>
-            <img data-original="" class="item-img index-img" src="img/science.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/science.png" %}"/>
             <h3 class="item-title">科学</h3>
             <h4 class="item-sub-title">宇宙 知识 学习</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='IT'>
-            <img data-original="" class="item-img index-img" src="img/IT.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/IT.png" %}"/>
             <h3 class="item-title">IT</h3>
             <h4 class="item-sub-title">通信 硬件 网络</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item " id='art'>
-            <img data-original="" class="item-img index-img" src="img/art.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/art.png" %}"/>
             <h3 class="item-title">艺术</h3>
             <h4 class="item-sub-title">鉴赏 雕塑 油画</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='cars'>
-            <img data-original="" class="item-img index-img" src="img/cars.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/cars.png" %}"/>
             <h3 class="item-title">汽车</h3>
             <h4 class="item-sub-title">降价 型号 排量</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='comic'>
-            <img data-original="" class="item-img index-img" src="img/comic.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/comic.png" %}"/>
             <h3 class="item-title">动漫</h3>
             <h4 class="item-sub-title">番外 剧情 卡通</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='game'>
-            <img data-original="" class="item-img index-img" src="img/game.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/game.png" %}"/>
             <h3 class="item-title">游戏</h3>
             <h4 class="item-sub-title">竞技 魔兽 更新</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='health'>
-            <img data-original="" class="item-img index-img" src="img/health.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/health.png" %}"/>
             <h3 class="item-title">健康</h3>
             <h4 class="item-sub-title">医疗 医院 养身</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='music'>
-            <img data-original="" class="item-img index-img" src="img/music.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/music.png" %}"/>
             <h3 class="item-title">音乐</h3>
             <h4 class="item-sub-title">明星 专辑 歌曲</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='photos'>
-            <img data-original="" class="item-img index-img" src="img/photos.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/photos.png" %}"/>
             <h3 class="item-title">摄影</h3>
             <h4 class="item-sub-title">相机 曝光 交流</h4>
             <span class='highlight-tip display-none'></span>
         </li>
 
         <li class="rect-item" id='trip'>
-            <img data-original="" class="item-img index-img" src="img/trip.png"/>
+            <img data-original="" class="item-img index-img" src="{% static "img/trip.png" %}"/>
             <h3 class="item-title">旅游</h3>
             <h4 class="item-sub-title">携程 路线 古迹</h4>
             <span class='highlight-tip display-none'></span>
